--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@nestjs/common": "^8.1.1",
     "@nestjs/core": "^8.1.1",
     "@nestjs/platform-express": "^8.1.1",
-    "@types/sequelize": "^4.28.13",
+    "@nestjs/sequelize": "^8.0.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
     "sequelize": "^6.21.2",
+    "sequelize-typescript": "^2.1.3",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
+    "@types/sequelize": "^4.28.13",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
