--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
     "sequelize": "^6.21.2",
+    "sequelize-typescript": "^2.1.3",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
